# python-glareclient

./: requirements.txt  setup.cfg  tox.ini
doc/source/: index.rst
glareclient/: __init__.py  client.py  exc.py  shell.py
glareclient/common/: base.py  exceptions.py  http.py  https.py  utils.py
glareclient/glare/: artifacts.py  client.py  shell.py
glareclient/openstack/common/apiclient/: auth.py  base.py  exceptions.py  utils.py
glareclient/osc/: plugin.py
glareclient/osc/v1/: action.py  artifacts.py  blobs.py
glareclient/tests/: utils.py
glareclient/tests/functional/: test_readonly_glance.py
glareclient/tests/unit/: fakes.py  test_base.py  test_client.py  test_common_http.py  test_exc.py  test_http.py  test_shell.py  test_ssl.py  test_utils.py
glareclient/tests/unit/osc/v1/: fakes.py  test_artifacts.py
glareclient/tests/unit/v1/: test_image_members.py  test_images.py  test_shell.py  test_versions.py
glareclient/tests/unit/v2/: test_client_requests.py  test_images.py  test_members.py  test_metadefs_namespaces.py  test_metadefs_objects.py  test_metadefs_properties.py  test_metadefs_resource_types.py  test_metadefs_tags.py  test_schemas.py  test_shell_v2.py  test_tags.py  test_tasks.py  test_versions.py
glareclient/v1/: __init__.py  artifacts.py  client.py  image_members.py  images.py  shell.py
glareclient/v2/: client.py  image_members.py  image_tags.py  images.py  metadefs.py  shell.py  tasks.py
releasenotes/notes/: log-request-id-e7f67a23a0ed5c7b.yaml
