[metadata]
name = python-glareclient
summary = OpenStack Image API Client Library
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/python-glareclient
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    glareclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    murano = glareclient.shell:main

openstack.cli.extension =
    application_catalog = glareclient.osc.plugin

openstack.application_catalog.v1 =
    environment_list = glareclient.osc.v1.environment:ListEnvironments
    environment_show = glareclient.osc.v1.environment:ShowEnvironment
    environment_rename = glareclient.osc.v1.environment:RenameEnvironment
    environment_session_create = glareclient.osc.v1.environment:EnvironmentSessionCreate
    environment_create = glareclient.osc.v1.environment:EnvironmentCreate
    environment_delete = glareclient.osc.v1.environment:EnvironmentDelete
    environment_deploy = glareclient.osc.v1.environment:EnvironmentDeploy
    environment_apps_edit = glareclient.osc.v1.environment:EnvironmentAppsEdit

    category_list = glareclient.osc.v1.category:ListCategories
    category_show = glareclient.osc.v1.category:ShowCategory
    category_create = glareclient.osc.v1.category:CreateCategory
    category_delete = glareclient.osc.v1.category:DeleteCategory

    deployment_list = glareclient.osc.v1.deployment:ListDeployment

    package_create = glareclient.osc.v1.package:CreatePackage

    static-action_call = glareclient.osc.v1.action:StaticActionCall
    class-schema = glareclient.osc.v1.schema:ShowSchema

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
