[metadata]
name = python-glareclient
summary = Glare Artifact Repository
description-file =
    README.rst
license = Apache License, Version 2.0
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/python-glareclient
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    glareclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]

openstack.cli.extension =
    artifact = glareclient.osc.plugin

openstack.artifact.v1 =
    artifact_list = glareclient.osc.v1.artifacts:ListArtifacts
    artifact_show = glareclient.osc.v1.artifacts:ShowArtifact
    artifact_create = glareclient.osc.v1.artifacts:CreateArtifact

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
